// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm when active renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      textContentType="emailAddress"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Senha"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Entrar"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`LoginForm when loading renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <NewTextInput
      displayStyle="loading"
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      textContentType="emailAddress"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <NewTextInput
      displayStyle="loading"
      onChangeText={[Function]}
      placeholder="Senha"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <ButtonSubmit
      display="loading"
      label="Entrar"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`LoginForm when there's an error renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(208, 2, 27, 0.75)",
          "borderRadius": 5,
          "flex": 1,
          "padding": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "rgb(255, 255, 255)",
          }
        }
      >
        PANIC! There's a problem!
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <NewTextInput
      displayStyle="error"
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      textContentType="emailAddress"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <NewTextInput
      displayStyle="error"
      onChangeText={[Function]}
      placeholder="Senha"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <ButtonSubmit
      display="error"
      label="Entrar"
      onPress={[Function]}
    />
  </View>
</View>
`;
